[gd_scene format=3 uid="uid://4vmngve4vdiw"]

[ext_resource type="Script" uid="uid://0386nqvt1cg6" path="res://update_dialog.gd" id="1_update"]
[ext_resource type="FontFile" uid="uid://c2jlc3nt8y38q" path="res://assets/font/atlas-0.png" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_update"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n8fak"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="UpdateDialog" type="CanvasLayer" unique_id=1396494092]
layer = 100
script = ExtResource("1_update")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1615843170]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="Panel" type="PanelContainer" parent="." unique_id=1117001461]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 120)
theme_override_styles/panel = SubResource("StyleBoxFlat_update")

[node name="Margin" type="MarginContainer" parent="Panel" unique_id=1880452579]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBox" type="VBoxContainer" parent="Panel/Margin" unique_id=1389012650]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/Margin/VBox" unique_id=174726788]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "UPDATE AVAILABLE!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/Margin/VBox" unique_id=186206440]
layout_mode = 2
theme_override_constants/separation = 10

[node name="VersionLabel" type="Label" parent="Panel/Margin/VBox" unique_id=1347488923]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 1, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "v0.0.X"
horizontal_alignment = 1
autowrap_mode = 2

[node name="LinkButton" type="Button" parent="Panel/Margin/VBox" unique_id=176781559]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../CloseButton")
focus_neighbor_bottom = NodePath("../IgnoreButton")
focus_next = NodePath("../IgnoreButton")
focus_previous = NodePath("../CloseButton")
theme_override_colors/font_color = Color(0.32, 0.69, 1, 1)
theme_override_font_sizes/font_size = 12
text = "OPEN RELEASE PAGE"
flat = true

[node name="IgnoreButton" type="Button" parent="Panel/Margin/VBox" unique_id=1479724202]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../LinkButton")
focus_neighbor_bottom = NodePath("../CloseButton")
focus_next = NodePath("../CloseButton")
focus_previous = NodePath("../LinkButton")
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_colors/font_pressed_color = Color(1, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 12
toggle_mode = true
text = "[ ] IGNORE THIS VERSION"
flat = true

[node name="Spacer" type="Control" parent="Panel/Margin/VBox" unique_id=2104329234]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="Panel/Margin/VBox" unique_id=2037468184]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../IgnoreButton")
focus_neighbor_bottom = NodePath("../LinkButton")
focus_next = NodePath("../LinkButton")
focus_previous = NodePath("../IgnoreButton")
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_n8fak")
text = "CLOSE"
flat = true
